# consoleme/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2020-06-12T23:44:42+00:00
+#   timestamp: 2020-06-15T22:15:42+00:00
 
 from __future__ import annotations
 
@@ -56,55 +56,25 @@ class ChangeGeneratorModel(BaseModel):
     generator_type: GeneratorType
     resource: str = Field(..., description="resource ARN")
     version: Optional[str] = Field(None, description="Version")
-
-
-class AccessLevelEnum(Enum):
-    read = "read"
-    write = "write"
-    list = "list"
-    tagging = "tagging"
-    permissions_management = "permissions-management"
+    action_groups: Optional[List[str]] = Field(None, description="Action groups")
 
 
 class GenericChangeGeneratorModel(ChangeGeneratorModel):
-    access_level: List[AccessLevelEnum]
-
-
-class ActionGroup(Enum):
-    list = "list"
-    get = "get"
-    put = "put"
-    delete = "delete"
+    access_level: List[str]
 
 
 class S3ChangeGeneratorModel(ChangeGeneratorModel):
     bucket_name: Optional[str] = None
     bucket_prefix: Optional[str] = None
-    action_groups: List[ActionGroup]
-
-
-class ActionGroup1(Enum):
-    get_queue_attributes = "get_queue_attributes"
-    set_queue_attributes = "set_queue_attributes"
-    receive_messages = "receive_messages"
-    send_messages = "send_messages"
-    delete_messages = "delete_messages"
+    action_groups: List[str]
 
 
 class SQSChangeGeneratorModel(ChangeGeneratorModel):
-    action_groups: List[ActionGroup1]
-
-
-class ActionGroup2(Enum):
-    get_topic_attributes = "get_topic_attributes"
-    set_topic_attributes = "set_topic_attributes"
-    publish = "publish"
-    subscribe = "subscribe"
-    unsubscribe = "unsubscribe"
+    action_groups: List[str]
 
 
 class SNSChangeGeneratorModel(ChangeGeneratorModel):
-    action_groups: List[ActionGroup2]
+    action_groups: List[str]
 
 
 class ChangeType(Enum):
@@ -209,6 +179,10 @@ class ApiErrorModel(BaseModel):
     status: Optional[int] = None
     title: Optional[str] = None
     message: Optional[str] = None
+
+
+class ChangeGeneratorModelArray(BaseModel):
+    changes: Optional[List[ChangeGeneratorModel]] = None
 
 
 class InlinePolicyChangeModel(ChangeModel):
